--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-flexbox-grid": "^2.1.2",
-    "react-icons": "^3.0.5",
+    "react-icons": "^3.3.0",
     "react-lazyload": "^2.3.0",
+    "react-player": "^1.9.1",
     "react-responsive-music-player": "^0.3.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "styled-components": "^3.3.3"
+    "redux": "^4.0.1",
+    "styled-components": "^3.3.3",
+    "video-react": "^0.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
