--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-2.0",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Restrella99.github.io/portfolio-2.0",
   "engines": {
     "node": "11.6.0",
     "npm": "6.5.0"
@@ -11,7 +12,7 @@
     "react-dom": "^16.7.0",
     "react-flexbox-grid": "^2.1.2",
     "react-icons": "^3.3.0",
-    "react-lazyload": "^2.3.0",
+    "react-lazyload": "^2.5.0",
     "react-player": "^1.9.1",
     "react-responsive-music-player": "^0.3.0",
     "react-router-dom": "^4.3.1",
@@ -21,9 +22,13 @@
     "video-react": "^0.13.2"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
