--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio-2.0",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Restrella99.github.io/portfolio-2.0",
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -20,7 +19,7 @@
     "video-react": "^0.13.2"
   },
   "scripts": {
-    "deploy": "npm run build&&gh-pages -d build",
+    "deploy": "yarn run build && surge -p build -d rafaelestrella.surge.sh",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
