--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.7.0",
     "react-flexbox-grid": "^2.1.2",
     "react-icons": "^3.3.0",
